# rag_flink_ui

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.sh  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: kafka_consumer.md  websocket_manager.md
docs/api/: README.md
docs/architecture/: README.md
docs/features/: README.md
docs/features/templates/: feature_template.md
docs/guides/: issue_documentation_integration.md
rag_flink_ui/: __init__.py
rag_flink_ui/backend/: __init__.py  main.py  mock_api.py  requirements.txt
rag_flink_ui/backend/services/: __init__.py  kafka_consumer.py  kafka_service.py  websocket_manager.py
rag_flink_ui/backend/tests/: test_kafka_consumer.py
rag_flink_ui/frontend/: app.py
scripts/: cleanup_labels.sh  create_labels.sh  run.py
tests/: test_kafka_consumer.py  test_kafka_service.py  test_mock_api.py  test_websocket.py  test_websocket_manager.py
