[tool.poetry]
name = "rag-flink-ui"
version = "0.1.0"
description = "A ChatGPT-like interface for Q&A using Streamlit and FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "rag_flink_ui"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
websockets = "^12.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
uuid = "^1.30"
loguru = "^0.7.2"
prometheus-client = "^0.19.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
cachetools = "^5.3.3"
redis = "^5.0.1"
aiokafka = "^0.8.1"
confluent-kafka = "^2.3.0"
avro-python3 = "^1.10.2"
httpx = "^0.27.0"
authlib = "^1.2.1"
fastavro = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 